# human-os-engine

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: openai_adapter.py  routes.py  session_store.py
config/: .env.example  settings.py
graph/: builder.py  state.py  streaming_pipeline.py
llm/: nvidia_client.py
modules/: engine_runtime.py  memory.py
prompts/: meta_controller.py  speech_generator.py
schemas/: context.py  enums.py  module_io.py  scene.py  strategy.py  user_state.py
scripts/: run_merge_gate.py  run_release_guard.py
simulation/: __init__.py  ab_test_report.json  ab_test_runner.py  analyze_intervention.py  arena_loop.py  arena_v2.py  batch_runner.py  battlefield_log.json  customer_agent.py  evaluator.py  evolution_runner.py  llm_judge.py  persona_factory.py  recorder.py  run_eval_set.py  run_mvp.py  run_sandbox_50x20.py  sandbox_core.py  sandbox_hybrid_test.py  sandbox_insight_pipeline.py  sandbox_runner.py  sandbox_v2.py  scene_evolver.py  test_hybrid_multiturn.py  test_sales_goal_achievement.py  test_sales_multi_round.py  test_scene_integration.py  test_short_phrase_random_multiturn.py  test_short_utterance_llm_eval.py  user_agent.py
tests/: benchmark_data.json  management_benchmark_data.json  negotiation_benchmark_data.json  test_api_admin_security.py  test_api_endpoints.py  test_baseline.py  test_benchmark.py  test_chain_invariants.py  test_comprehensive.py  test_counter_example_lib.py  test_deepseek.py  test_e2e.py  test_emotion_benchmark.py  test_engine_runtime.py  test_eval_failure_code_reporting.py  (+68 more)
(+111 files in other folders)
