[project]
name = "human-os-engine"
version = "3.0"
description = "Human-OS 3.0 - Goal-oriented, attention-driven, equal博弈 human behavior engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-openai>=0.2.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0"]
dev = ["human-os-engine[test]", "ruff>=0.6.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=html --cov-report=term-missing --ignore=simulation/evolved"
